--- a/src/app/components/employees/employees-list/employees-list.component.html
+++ b/src/app/components/employees/employees-list/employees-list.component.html
@@ -1,1 +1,26 @@
-<p>employees-list works!</p>
+<div class="container my-5">
+    <h1 class="mb-3">Employees</h1>
+    <table class="table" *ngIf="employees && employees.length > 0">
+        <thead>
+            <th>Id</th>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Phone</th>
+            <th>Salary</th>
+            <th>Department</th>
+        </thead>
+        <tbody>
+            <tr *ngFor="let emp of employees">
+                <td>{{emp.id}}</td>
+                <td>{{emp.name}}</td>
+                <td>{{emp.email}}</td>
+                <td>{{emp.phone}}</td>
+                <td>{{emp.salary}}</td>
+                <td>{{emp.department}}</td>
+            </tr>
+        </tbody>
+    </table>
+    <p *ngIf="!employees || employees.length < 0">
+        No Employees Found
+    </p>
+</div>
